@@ -932,3 +932,7 @@
 2013-01-18  Thiep Ha (thiep.ha@samsung.com)
 
         * Fix memory leak of the ctxpopup and callback function to be a ctxpoup obj is delivered to.
+
+2013-01-19  WooHyun Jung
+
+        * When string in entry is changed, access to sd should be forbidden after smart_callback_call is called.
